kube/charity-conf.yml
### Charity API
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sharecare-charity
  labels:
    app: charity-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: charity-api
  template:
    metadata:
      labels:
        app: charity-api
    spec:
      containers:
      - name: charity-api
        image: eu.gcr.io/lloyds-hackathon-team-1/sharecare-charity:latest
        ports:
        - containerPort: 3000
        readinessProbe:
          initialDelaySeconds: 1
          periodSeconds: 2
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 1
          httpGet:
            host:
            scheme: HTTP
            path: /charities
            port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: charity-api-service
spec:
  type: NodePort  #gives us an external IP address
  selector:
    app: charity-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
