kube/media-conf.yml
### Media API
apiVersion: v1
kind: Pod
metadata:
  name: sharecare-media
  labels:
    purpose: sharecare-app
    app: media-api
spec:
  containers:
  - name: media-api
    image: eu.gcr.io/lloyds-hackathon-team-1/sharecare-media:latest
---
apiVersion: v1
kind: Service
metadata:
  name: media-api-service
spec:
  type: LoadBalancer  #gives us an external IP address
  selector:
    app: media-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
