kube/post-conf.yml
### POST API
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sharecare-post
  labels:
    app: post-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: post-api
  template:
    metadata:
      labels:
        app: post-api
    spec:
      containers:
      - name: post-api
        image: eu.gcr.io/lloyds-hackathon-team-1/sharecare-post:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: post-api-service
spec:
  type: ClusterIP  #gives us an external IP address
  selector:
    app: user-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
