kube/user-conf.yml
### User API
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sharecare-user
  labels:
    app: user-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-api
  template:
    metadata:
      labels:
        app: user-api
    spec:
      containers:
      - name: user-api
        image: eu.gcr.io/lloyds-hackathon-team-1/sharecare-user:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: user-api-service
spec:
  type: ClusterIP  #gives us an external IP address
  selector:
    app: user-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
