kube/ext-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: web-frontend-service
            port:
              number: 80
      - path: /api/posts
        pathType: ImplementationSpecific
        backend:
          service:
            name: post-api-service
            port:
              number: 80
      - path: /api/users
        pathType: ImplementationSpecific
        backend:
          service:
            name: user-api-service
            port:
              number: 80
      - path: /api/charities
        pathType: ImplementationSpecific
        backend:
          service:
            name: charity-api-service
            port:
              number: 80
