kube/external-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-ingress
  # annotations:
    # If the class annotation is not specified it defaults to "gce".
    #  kubernetes.io/ingress.class: "gce"
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /*
#         pathType: ImplementationSpecific
#         backend:
#           service:
#             name: frontend-api
#             port:
#               number: 80
spec:
  defaultFrontend:
    service:
      name: front-end
      port:
        number: 80
