kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce". (Gives the loadbalancer an external IP address)
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: web-frontend-service
            port:
              number: 80
      - path: /users
        pathType: ImplementationSpecific
        backend:
          service:
            name: user-api-service
            port:
              number: 3000
      - path: /media/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: media-api-service
            port:
              number: 3000
      - path: /posts
        pathType: ImplementationSpecific
        backend:
          service:
            name: post-api-service
            port:
              number: 3000
      - path: /charities
        pathType: ImplementationSpecific
        backend:
          service:
            name: charity-api-service
            port:
              number: 3000
