kube/ingress2.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-rules
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: web-frontend-service
          servicePort: 80
        path: /
      - backend:
          serviceName: user-api-service
          servicePort: user-api-port
        path: /users
